installed newest version of aksel/ds, fixed visible overflow for inputfield

--- a/src/components/inputfield/InputField.css
+++ b/src/components/inputfield/InputField.css
@@ -1,16 +1,22 @@
-.inputfield {
+.inputfield-background {
   background: var(--a-bg-default);
 }
 
-body.dark .inputfield {
+body.dark .inputfield-background {
   background: var(--new-bg);
 }
 
+.inputfield {
+  overflow: visible;
+}
+
 .input-button {
-  max-height: 2rem;
+  max-height: 2.5rem;
   height: 100%;
-  max-width: 2rem;
+  max-width: 2.3rem;
   width: 100%;
+  right: 0.2%;
+  top: 2%;
 }
 
 .text-area {
