--- a/src/global.css
+++ b/src/global.css
@@ -107,6 +107,7 @@ ul {
   display: flex;
   width: 100%;
   max-width: 48rem;
+  overflow: visible;
 }
 
 .hide-on-desktop {
